2002-10-25  Bill Bumgarner  <bbum@codefab.com>

	* Changed the objc_support.m to compile in the invocation tear
	down code.

2002-10-24  Bill Bumgarner  <bbum@codefab.com>

	* Fixed up web services tool example slightly.

	* Changed objc_selcall to not release allocator method returns.
	Not sure if this is absolutely correct, but if fixes a bunch of
	code that had been implemented in a standard pattern.

	* Added a number of NS* tests.
	* "Fixed" a crasher that would happen after the second time a
	collection class was alloc()'d.

2002-10-23  Bill Bumgarner  <bbum@codefab.com>
	* Added a test_paths test suite to Foundation.  Tests one function
	(currently causes a bus error).

2002-10-22  Bill Bumgarner  <bbum@codefab.com>
	* Split Foundation unit tests into two suites.

	* Updated objc unit tests a bit.
	* Added Foundation unit tests.
	* Moved a number of tests from objc -> Foundation.

	* Updated the MANIFEST (too bad we can't effectively use MANIFEST.in)
	* Slight correction/addition to setup.py

	* Added basic unit tests to objc.
	* Implemented __ne__ in terms of isEqual_ (not isNotEqual_).
	* Added unit test that tests that an object is equal to itself.

2002-10-18  Bill Bumgarner  <bbum@codefab.com>
	* Fixed the -dealloc method in OC_PythonDictionary.
	* Disabled gc in objc's __init__.py (I thought we had done this in
	the past, but it seems to have gotten lost) only for python
	2.2.x.
	* Replaced all occurrences of True and False to 1 and 0 in
	Ronald's previous changes.
	* Changed TableModel2 example to be like TableModel example

2002-10-18 Ronald Oussoren <oussoren@cistron.nl>
	* Better fix for crash while converting exception from Python to
	  Objective-C
	* Code cleanup in OC_*.[hm], ObjCPointer.m
	* Cleaner code to check if the Objective-C class has a changed 
	  method table.
	* Native selectors now have a 'defining_class' attribute, which 
	  contains a reference to the class that defined this method.